# ocr-quailty-check

./: .gitignore  README.md  pyproject.toml  start.py
config/: quality.default.json
docs/: api.md  architecture.md  development.md  usage.md
docs/superpowers/plans/: 2026-06-26-ocr-quality.md  2026-06-30-ocr-quality-paddle.md  2026-07-02-ocr-occlusion-risk.md
docs/superpowers/specs/: 2026-06-26-ocr-quality-design.md  2026-07-02-ocr-occlusion-risk-design.md
src/ocr_quality/: __init__.py  benchmark.py  cli.py  config.py  config_loader.py  decision.py  file_decoder.py  file_inspector.py  image_metrics.py  instrumentation.py  models.py  normalizer.py  occlusion.py  ocr_probe.py  orientation.py  page.py  pipeline.py  text_detection.py  text_regions.py
src/ocr_quality/adapters/: __init__.py  paddle_ocr.py
src/ocr_quality/web/: __init__.py  app.py  server.py
src/ocr_quality/web/static/: index.html
tests/: test_benchmark.py  test_config_loader.py  test_decision_engine.py  test_encoding_contract.py  test_file_decoder.py  test_image_metrics.py  test_instrumentation.py  test_occlusion.py  test_orientation.py  test_paddle_adapters.py  test_quality_pipeline.py  test_start_scripts.py  test_text_regions.py  test_web_app.py
tests/integration/: test_optional_paddleocr.py
